backends/tfhe-cuda-backend/src/bindings.rs

extern "C" {
    pub fn cleanup_cuda_integer_radix_overflowing_sub(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr_void: *mut *mut i8,
    );
}
extern "C" {
    pub fn scratch_cuda_integer_scalar_mul_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr: *mut *mut i8,
        glwe_dimension: u32,
        polynomial_size: u32,
        lwe_dimension: u32,
        ks_level: u32,
        ks_base_log: u32,
        pbs_level: u32,
        pbs_base_log: u32,
        grouping_factor: u32,
        num_blocks: u32,
        message_modulus: u32,
        carry_modulus: u32,
        pbs_type: PBS_TYPE,
        allocate_gpu_memory: bool,
    );
}
extern "C" {
    pub fn cuda_scalar_multiplication_integer_radix_ciphertext_64_inplace(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        lwe_array: *mut ffi::c_void,
        decomposed_scalar: *const u64,
        has_at_least_one_set: *const u64,
        mem_ptr: *mut i8,
        bsks: *const *mut ffi::c_void,
        ksks: *const *mut ffi::c_void,
        lwe_dimension: u32,
        polynomial_size: u32,
        message_modulus: u32,
        num_blocks: u32,
        num_scalars: u32,
    );
}
extern "C" {
    pub fn cleanup_cuda_integer_radix_scalar_mul(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr_void: *mut *mut i8,
    );
}
extern "C" {
    pub fn scratch_cuda_integer_div_rem_radix_ciphertext_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr: *mut *mut i8,
        glwe_dimension: u32,
        polynomial_size: u32,
        big_lwe_dimension: u32,
        small_lwe_dimension: u32,
        ks_level: u32,
        ks_base_log: u32,
        pbs_level: u32,
        pbs_base_log: u32,
        grouping_factor: u32,
        num_blocks: u32,
        message_modulus: u32,
        carry_modulus: u32,
        pbs_type: PBS_TYPE,
        allocate_gpu_memory: bool,
    );
}
extern "C" {
    pub fn cuda_integer_div_rem_radix_ciphertext_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        quotient: *mut ffi::c_void,
        remainder: *mut ffi::c_void,
        numerator: *const ffi::c_void,
        divisor: *const ffi::c_void,
        mem_ptr: *mut i8,
        bsks: *const *mut ffi::c_void,
        ksks: *const *mut ffi::c_void,
        num_blocks_in_radix: u32,
    );
}
extern "C" {
    pub fn cleanup_cuda_integer_div_rem(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr_void: *mut *mut i8,
    );
}
extern "C" {
    pub fn scratch_cuda_signed_overflowing_add_or_sub_radix_ciphertext_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr: *mut *mut i8,
        glwe_dimension: u32,
        polynomial_size: u32,
        big_lwe_dimension: u32,
        small_lwe_dimension: u32,
        ks_level: u32,
        ks_base_log: u32,
        pbs_level: u32,
        pbs_base_log: u32,
        grouping_factor: u32,
        num_blocks: u32,
        signed_operation: i8,
        message_modulus: u32,
        carry_modulus: u32,
        pbs_type: PBS_TYPE,
        allocate_gpu_memory: bool,
    );
}
extern "C" {
    pub fn cuda_signed_overflowing_add_or_sub_radix_ciphertext_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        lhs: *mut ffi::c_void,
        rhs: *const ffi::c_void,
        overflowed: *mut ffi::c_void,
        signed_operation: i8,
        mem_ptr: *mut i8,
        bsks: *const *mut ffi::c_void,
        ksks: *const *mut ffi::c_void,
        num_blocks_in_radix: u32,
    );
}
extern "C" {
    pub fn cleanup_signed_overflowing_add_or_sub(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr_void: *mut *mut i8,
    );
}
extern "C" {
    pub fn scratch_cuda_integer_compute_prefix_sum_hillis_steele_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr: *mut *mut i8,
        input_lut: *const ffi::c_void,
        lwe_dimension: u32,
        glwe_dimension: u32,
        polynomial_size: u32,
        ks_level: u32,
        ks_base_log: u32,
        pbs_level: u32,
        pbs_base_log: u32,
        grouping_factor: u32,
        num_radix_blocks: u32,
        message_modulus: u32,
        carry_modulus: u32,
        pbs_type: PBS_TYPE,
        allocate_gpu_memory: bool,
    );
}
extern "C" {
    pub fn cuda_integer_compute_prefix_sum_hillis_steele_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        output_radix_lwe: *mut ffi::c_void,
        generates_or_propagates: *mut ffi::c_void,
        mem_ptr: *mut i8,
        ksks: *const *mut ffi::c_void,
        bsks: *const *mut ffi::c_void,
        num_blocks: u32,
        shift: u32,
    );
}
extern "C" {
    pub fn cleanup_cuda_integer_compute_prefix_sum_hillis_steele_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr_void: *mut *mut i8,
    );
}
extern "C" {
    pub fn cuda_integer_reverse_blocks_64_inplace(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        lwe_array: *mut ffi::c_void,
        num_blocks: u32,
        lwe_size: u32,
    );
}
extern "C" {
    pub fn cuda_keyswitch_lwe_ciphertext_vector_32(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        lwe_array_out: *mut ffi::c_void,
        lwe_output_indexes: *const ffi::c_void,
        lwe_array_in: *const ffi::c_void,
        lwe_input_indexes: *const ffi::c_void,
        ksk: *const ffi::c_void,
        lwe_dimension_in: u32,
        lwe_dimension_out: u32,
        base_log: u32,
        level_count: u32,
        num_samples: u32,
    );
}
extern "C" {
    pub fn cuda_keyswitch_lwe_ciphertext_vector_64(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        lwe_array_out: *mut ffi::c_void,
        lwe_output_indexes: *const ffi::c_void,
        lwe_array_in: *const ffi::c_void,
        lwe_input_indexes: *const ffi::c_void,
        ksk: *const ffi::c_void,
        lwe_dimension_in: u32,
        lwe_dimension_out: u32,
        base_log: u32,
        level_count: u32,
        num_samples: u32,
    );
}
extern "C" {
    pub fn scratch_packing_keyswitch_lwe_list_to_glwe_64(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        fp_ks_buffer: *mut *mut i8,
        glwe_dimension: u32,
        polynomial_size: u32,
        num_lwes: u32,
        allocate_gpu_memory: bool,
    );
}
extern "C" {
    pub fn cuda_packing_keyswitch_lwe_list_to_glwe_64(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        glwe_array_out: *mut ffi::c_void,
        lwe_array_in: *const ffi::c_void,
        fp_ksk_array: *const ffi::c_void,
        fp_ks_buffer: *mut i8,
        input_lwe_dimension: u32,
        output_glwe_dimension: u32,
        output_polynomial_size: u32,
        base_log: u32,
        level_count: u32,
        num_lwes: u32,
    );
}
extern "C" {
    pub fn cleanup_packing_keyswitch_lwe_list_to_glwe(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        fp_ks_buffer: *mut *mut i8,
    );
}
extern "C" {
    pub fn cuda_negate_lwe_ciphertext_vector_32(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        lwe_array_out: *mut ffi::c_void,
        lwe_array_in: *const ffi::c_void,
        input_lwe_dimension: u32,
        input_lwe_ciphertext_count: u32,
    );
}
extern "C" {
    pub fn cuda_negate_lwe_ciphertext_vector_64(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        lwe_array_out: *mut ffi::c_void,
        lwe_array_in: *const ffi::c_void,
        input_lwe_dimension: u32,
        input_lwe_ciphertext_count: u32,
    );
}
extern "C" {
    pub fn cuda_add_lwe_ciphertext_vector_32(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        lwe_array_out: *mut ffi::c_void,
        lwe_array_in_1: *const ffi::c_void,
        lwe_array_in_2: *const ffi::c_void,
        input_lwe_dimension: u32,
        input_lwe_ciphertext_count: u32,
    );
}
extern "C" {
    pub fn cuda_add_lwe_ciphertext_vector_64(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        lwe_array_out: *mut ffi::c_void,
        lwe_array_in_1: *const ffi::c_void,
        lwe_array_in_2: *const ffi::c_void,
        input_lwe_dimension: u32,
        input_lwe_ciphertext_count: u32,
    );
}
extern "C" {
    pub fn cuda_add_lwe_ciphertext_vector_plaintext_vector_32(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        lwe_array_out: *mut ffi::c_void,
        lwe_array_in: *const ffi::c_void,
        plaintext_array_in: *const ffi::c_void,
        input_lwe_dimension: u32,
        input_lwe_ciphertext_count: u32,
    );
}
extern "C" {
    pub fn cuda_add_lwe_ciphertext_vector_plaintext_vector_64(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        lwe_array_out: *mut ffi::c_void,
        lwe_array_in: *const ffi::c_void,
        plaintext_array_in: *const ffi::c_void,
        input_lwe_dimension: u32,
        input_lwe_ciphertext_count: u32,
    );
}
extern "C" {
    pub fn cuda_mult_lwe_ciphertext_vector_cleartext_vector_32(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        lwe_array_out: *mut ffi::c_void,
        lwe_array_in: *const ffi::c_void,
        cleartext_array_in: *const ffi::c_void,
        input_lwe_dimension: u32,
        input_lwe_ciphertext_count: u32,
    );
}
extern "C" {
    pub fn cuda_mult_lwe_ciphertext_vector_cleartext_vector_64(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        lwe_array_out: *mut ffi::c_void,
        lwe_array_in: *const ffi::c_void,
        cleartext_array_in: *const ffi::c_void,
        input_lwe_dimension: u32,
        input_lwe_ciphertext_count: u32,
    );
}
extern "C" {
    pub fn cuda_fourier_polynomial_mul(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        input1: *const ffi::c_void,
        input2: *const ffi::c_void,
        output: *mut ffi::c_void,
        polynomial_size: u32,
        total_polynomials: u32,
    );
}
extern "C" {
    pub fn cuda_convert_lwe_programmable_bootstrap_key_32(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        dest: *mut ffi::c_void,
        src: *const ffi::c_void,
        input_lwe_dim: u32,
        glwe_dim: u32,
        level_count: u32,
        polynomial_size: u32,
    );
}
extern "C" {
    pub fn cuda_convert_lwe_programmable_bootstrap_key_64(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        dest: *mut ffi::c_void,
        src: *const ffi::c_void,
        input_lwe_dim: u32,
        glwe_dim: u32,
        level_count: u32,
        polynomial_size: u32,
    );
}
extern "C" {
    pub fn scratch_cuda_programmable_bootstrap_amortized_32(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        pbs_buffer: *mut *mut i8,
        glwe_dimension: u32,
        polynomial_size: u32,
        input_lwe_ciphertext_count: u32,
        allocate_gpu_memory: bool,
    );
}
extern "C" {
    pub fn scratch_cuda_programmable_bootstrap_amortized_64(
        stream: *mut ffi::c_void,
        gpu_index: u32,
        pbs_buffer: *mut *mut i8,
        glwe_dimension: u32,
        polynomial_size: u32,
        input_lwe_ciphertext_count: u32,
        allocate_gpu_memory: bool,
    );
}
